--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Forty
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "/raonworks.github.io" # the subpath of your site, e.g. /blog
 url: https://github.com/raonworks/raonworks.github.io
 author:
 street_address: 1234 Somewhere Road
