modify config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # site settings
 title: Forty
 subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+email: popodaddy@gmail.com
+description: 명품 개발자
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://github.com/raonworks/raonworks.github.io
 author:
