--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
+title: devHong
+subtitle: Backend Developer
 email: popodaddy@gmail.com
 description: 명품 개발자
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://github.com/raonworks/raonworks.github.io
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
+street_address: 부천시 지봉로
+city: 경기도
+state: 
 zip_code: 01411
-country: Korea
+country: 한국
 phone: (010) 8873-7872
 
 # homepage tiles
